--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^4.14.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.30",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
