--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@astrojs/tailwind": "^5.1.0",
     "@google-cloud/functions": "^3.6.0",
     "@google-cloud/storage": "^7.12.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.45.2",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
@@ -31,6 +36,7 @@
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
